# netcdf-c-bazel

./: .gitignore  BUILD.bazel  Dockerfile  README.md  WORKSPACE.bazel
